--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,22 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  host: localhost
+  username: username
+  password: password
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: dev_flapper
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: test_flapper
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: prod_flapper
